# griptape-structure-slack-handler

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  structure_config.yaml
griptape_structure_slack_handler/: __init__.py  griptape_config.py  griptape_event_handlers.py  griptape_handler.py  griptape_tool_box.py  slack_handler.py  slack_util.py
griptape_structure_slack_handler/griptape/: read_only_conversation_memory.py  slack_event_listener_driver.py  tool_event.py
