[project]
name = "griptape-structure-slack-handler"
version = "0.1.0"
description = "Structure slack handler"
readme = "README.md"
requires-python = ">=3.12.0, <3.13"
dependencies = [
  "azure-identity>=1.6.0",
  "griptape",
  "requests>=2.32.5",
  "requests-toolbelt>=1.0.0",
  "slack_bolt>=1.25.0"
]

[tool.uv.sources]
griptape = {git = "https://github.com/griptape-ai/griptape", branch = "main"}


[dependency-groups]
dev = [
    "black>=24.8.0",
    "invoke>=2.2.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.5"
]

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["."]
exclude = [
  "LICENSE",
  ".venv",
  "**/.venv",
  "**/node_modules",
  "**/__pycache__",
  "**/.*",
]
pythonVersion = "3.12"
reportIncompatibleMethodOverride = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"